# indo-ecommerce-review-summarization

./: .env.example  CONTRIBUTING.md  LICENSE  NLPpaper_Mistral7B.ipynb  NLPpaper_Phi_2.ipynb  NLPpaper_Vicuna7B.ipynb  NLPpaper_llama7b.ipynb  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
data/samples/: sample_reviews.json
examples/: basic_usage.py
notebooks/: 01_mistral_summarization.ipynb  02_model_comparison.ipynb  03_rouge_evaluation.ipynb
scripts/: evaluate_summaries.py  generate_summaries.py  preprocess_reviews.py
src/indo_ecommerce_review_summarization/: __init__.py
src/indo_ecommerce_review_summarization/evaluation/: __init__.py  rouge_metrics.py
src/indo_ecommerce_review_summarization/models/: __init__.py  llm_interface.py  prompt_templates.py
src/indo_ecommerce_review_summarization/preprocessing/: __init__.py  data_loader.py  text_cleaner.py
src/indo_ecommerce_review_summarization/utils/: __init__.py  file_utils.py  logging_utils.py
tests/: conftest.py  test_evaluation.py  test_models.py  test_preprocessing.py  test_utils.py
